--- a/static/hw/hw-04.Rmd
+++ b/static/hw/hw-04.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "HW 04"
+title: "HW 04: MLR - Transformations"
 subtitle: ""
 author: ""
 date: ""
@@ -16,4 +16,86 @@ knitr::opts_chunk$set(echo = TRUE,
                       message=FALSE)
 ```
 
-Instructions will be posted once the homework is assigned.
+# Getting started
+
+Clone the **hw-04-** repo and start a new project in RStudio. For more detailed instructions about getting started, see the [Lab 01 instructions](https://sta210-fa20.netlify.app/labs/lab-01-practice-r.html)
+
+Type the following lines of code in the **console** in RStudio filling in your Github username and the email address associated with your Github account.
+
+```{r eval=FALSE}
+library(usethis)
+use_git_config(user.name = "your github username", 
+               user.email="your email")
+```
+
+## Packages 
+
+We will use the following packages in this assignment: 
+
+```{r}
+library(tidyverse)
+library(broom)
+library(knitr)
+#add other packages as needed
+```
+
+# Questions
+
+## Part 1: Conceptual questions
+
+In Part 1, we will examine data on the [2000 U.S. presidential election](https://en.wikipedia.org/wiki/2000_United_States_presidential_election) between George W. Bush and Al Gore. It was one of the closest elections in history that ultimately came down to the state of Florida. The race was so close, in fact, that the projected winner in Florida (and thus the winner of the election) changed multiple times throughout the night. 
+
+The variables are 
+
+- County: County name
+- Bush2000: Number of votes for George W. Bush
+- Buchanan2000: Number of votes for Pat Buchanan
+
+[FINISH INTRODUCTION]
+
+You can find the data in `florida-votes-2000.csv`.
+
+**For each question, you must show all relevant code and output to support your narrative in order to  receive full credit.**
+
+1. Make a scatterplot showing the relationship between the number of votes for Buchanan versus the number of votes for Bush. 
+
+Describe the relationship between the votes for Buchanan and votes for Bush. 
+
+2. What is the county with the extreme outlier number of votes for Buchanan? Create a new data frame that doesn't include the outlying county. **You will use this updated data frame for Questions 3 - 5.**
+
+3. We'd like to fit a model that can be used to predict the number of votes for Buchanan based on the number of votes for Bush in a given county. To do so, we'll use the mean-centered version of `Bush2000` for the model. 
+   
+   - Briefly explain why we want to use the mean-centered version of `Bush2000` in the model rather than the original variable? 
+   - Create a new variable, `Bush2000_cent` that is the mean-centered `Bush2000`. Be sure to save the variable to the data frame. 
+
+4. Fit a model to predict the number of votes for Buchanan based on the number of votes for Bush in the county. Save the model as `original_model`.  Show the code and output displaying your model. 
+ 
+   - Interpret the intercept in the context of the data.
+   - Interpret the coefficient of `Bush2000_cent`in the context of the data. 
+ `Bush2000_cent`in the context of the data. 
+
+
+5. Next, let's fit a model using the log-transformed `Buchanan2000` as the response variable and `Bush2000_cent` as the predictor. 
+ 
+    - Interpret the intercept in terms of the number of votes for Buchanan. 
+    - Interpret the coefficient of `Bush2000_cent`in terms of the number of votes for Buchanan. 
+
+
+6. Now let's fit a model using `Buchanan2000` as the response and the log-transformed `Bush2000_cent` as the predictor.
+ 
+   - Interpret the intercept in terms of the number of votes for Buchanan. 
+   - Interpret the coefficient of associated with Bush2000 in t   erms of the number of votes for Buchanan. 
+
+7. Compare the three models fit in Question 4 - 6. Which model best fits the data? Show any relevant analysis and/or statistics used to choose the best fit model. 
+
+8. Use the model you choose in Question 7 to predict the number of votes for Buchanan in the outlier county identified in Question 2. Include the prediction and appropriate 95% interval.  
+
+9. It is widely assumed that some of the votes for Buchanan in that county were actually intended to be for Gore. Based on the interval from the previous question, about how many votes were possibly intended for Gore? 
+
+
+<br><br>
+
+<hr>
+
+The data are originally from the Sleuth3 R package.
+
