--- a/static/slides/12-model-comparison.Rmd
+++ b/static/slides/12-model-comparison.Rmd
@@ -22,7 +22,7 @@ editor_options:
 
 class: middle, center
 
-## [Click here for PDF of slides](12-comparing-models.pdf)
+## [Click here for PDF of slides](12-model-comparison.pdf)
 
 ---
 
